--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
           </div>
           <ul class="sci">
            
-            <li><a href="https://instagram-login-ui-5bf1e5.netlify.app/" target="_blank"><i class="fa-solid fa-eye fa-lg"></i></a></li>
+            <li><a href="https://instagram-dcd94d.netlify.app" target="_blank"><i class="fa-solid fa-eye fa-lg"></i></a></li>
             <li><a href="https://github.com/Tamil3012/Instagram-UI" target="_blank"><i class="fa-brands fa-github fa-lg"></i></a></li>
             
 
